<?xml version="1.0"?>
<package format="2">
  <name>sensor_mounts</name>
  <version>0.0.2</version>
  <description>Meta-package to install all sensor mounts</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>lockmount_description</exec_depend>
  <exec_depend>velodyne_mount</exec_depend>

  <export>
  </export>
</package>
