<?xml version="1.0"?>
<package format="2">
  <name>velodyne_mount</name>
  <version>0.0.2</version>
  <description>URDF Macro for a VLP16 mounts commonly used on Husky and Warthog sensor arches.</description>
  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</author>
  <author email="jschmidt@clearpathrobotics.com">Jeff Schmidt</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
